SudokuBoard (board) and Dao (exception) fixes